--- a/yimi/public/assets/css/common.css
+++ b/yimi/public/assets/css/common.css
@@ -108,7 +108,7 @@ select option{
 .suspension .d-service-item:hover .i-qq{background-position:center 3px;}
 .suspension .d-service-item .i-tel{width:44px;height:44px;background:url(../img/side_con_icon02.png) no-repeat center center;display:block;}
 .suspension .d-service-item h3{float:left;width:112px;line-height:44px;font-size:15px;margin-left:12px;}
-.suspension .d-service-item .text{ color:#eeeeee;float:left;width:112px;line-height:22px;font-size:15px;margin-left:12px;}
+.suspension .d-service-item .text{ color:#fff;float:left;width:112px;line-height:22px;font-size:15px;margin-left:12px;}
 .suspension .d-service-item .text .number{font-family:Arial,"Microsoft Yahei","HanHei SC",PingHei,"PingFang SC","Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;}
 .suspension .d-service-intro{padding-top:10px;}
 .suspension .d-service-intro p{float:left;line-height:27px;font-size:12px;width:50%;white-space:nowrap;color:#888;}
