--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -555,6 +555,9 @@
 	.order-price,.order-total-price{
 		display: none;
 	}
+	.swiper-wraper{
+		margin-right: 20px;
+	}
 	/*.swiper-wraper{
 		width: 100%;
 	}
