--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -1028,6 +1028,7 @@
 	.order-menu{
 		padding: 0px!important;
         margin-bottom: 10px;
+        font-size: 12px;
 	}
 	.cllectionSearch{
 		clear: both!important;
