--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -23,10 +23,11 @@
 .topSearch .top-search input{
 	height: 0.78125rem; /*98px*/
 	color: #fff;
-	background-color:rgba(89,89,89,0.1);
+	/*background-color:rgba(89,89,89,0.1);*/
 	border: none;
 	width: 100%;
 	border-radius: 15px;
+	background-color:#fff;
 }
 .topSearch .top-search input{
 	padding: 0px 0.128205rem 0px 0.34188rem;
@@ -218,6 +219,8 @@
 	}
 	.searchText, .good-list-top{
 		margin-bottom: 18px;
+		padding: 0px 10px 10px!important;
+		line-height: 36px!important;
 	}
 	.searchText{
 		margin-top: 10px;
@@ -331,7 +334,10 @@
 	}
 	.d-detail-img{
 		margin-bottom: 20px;
+	    margin-top: 20px;
+	    padding: 0px!important;
 	}
+
 	.checkAllBrand{
 		left: 13px;
 	}
@@ -797,7 +803,7 @@
        display: block;
 	}
 	.discuss-order{
-		padding:30px 10px!important;
+		padding:10px!important;
 		margin-bottom: 0px!important;
 	}
 	.discuss-item{
@@ -1045,9 +1051,10 @@
 	.cllectionSearch{
 		clear: both!important;
 		float: none!important;
-		width: 300px;
+		width: 275px!important;
 		border-radius: 20px;
-		background: url(../img/userSearch.png) 264px center no-repeat #fff;
+		height: 30px!important;
+		background: url(../img/userSearch.png) 237px center no-repeat #fff;
 	}
 	.searchText .order-menu a{
 
@@ -1101,6 +1108,12 @@
 	.mobileIco.ico-wraps:before{
 		left: 43%;
 	}
+	.litteBanner,.litteBannerImg img{
+		max-height: 168px!important;
+	}
+	.d-detail-img div{
+	  margin: 32px 5.4% 0px 0;
+	}
 
 }
 @media (max-width: 375px) {
@@ -1117,10 +1130,11 @@
 		width: 21.4%;
 	}
 	.d-detail-img div{
-		width: 115%;
-	    margin: 0px;
-	    margin-left: -15px;
-	    margin-top: 15px;
+		width: 47%;
+    	margin-right: 15px;
+	}
+	.d-detail-img div:nth-child(2n){
+		margin-right:0px!important
 	}
 	.d-detail-img div img{
 		width: 100%;
@@ -1148,7 +1162,7 @@
 	.designer-user.col-xs-3{
 		width: 25%;
 	}
-	.litteBanner{
-		max-height: 141px!important;
+	.litteBanner,.litteBannerImg img{
+		max-height: 160px!important;
 	}
 }
