--- a/yimi/public/assets/css/rem.css
+++ b/yimi/public/assets/css/rem.css
@@ -4,7 +4,7 @@ html{
 
 .container-fluid,.container{
 	padding:0.0rem;
-	width: 10.0rem;
+	/*width: 10.0rem;*/
 }
 .index-content{
 	width: 10.0rem;
