--- a/yimi/public/assets/css/rem.css
+++ b/yimi/public/assets/css/rem.css
@@ -97,9 +97,9 @@ html{
 #fh5co-board .item img{
 	width: 2.317597rem;
 }
-.item{
+/*.item{
 	width: 2.317597rem;
-}
+}*/
 /*.designer{
 	width: auto;
 	margin-right:auto;
