--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -23,8 +23,7 @@
 	top:35%;
 	left:10%;
 	text-align: center;
-}
-#fh5co-board .itemHover .ico-wrap a{
+}#fh5co-board .itemHover .ico-wrap a{
 	display: inline-block;
 	color: #333333;
 }
@@ -33,6 +32,10 @@
 }
 .col-md-12.noPadding{
 	padding:0px!important;
+}
+.ico-wrap span{
+	margin-right: 20px;
+    margin-left: 8px;
 }
 /*index end*/
 /*买手推荐*/
