--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -34,8 +34,8 @@
 	padding:0px!important;
 }
 .ico-wrap span{
-	margin-right: 20px;
-    margin-left: 8px;
+	margin-right: 20px!important;
+    margin-left: 8px!important;
 }
 /*index end*/
 /*买手推荐*/
