--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -1224,4 +1224,4 @@ span.more{
 .addressOne{
 	width: 70%;
 }
-.size3 .size-1of4 { width: 33.333%!important; }
+/*.size3 .size-1of4 { width: 33.333%!important; }*/
