--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -1261,6 +1261,6 @@ span.more{
 .designer.buyer dl dt,
 .designer.buyer dl dd, 
 .designer.buyer dl dd img{
-	width: 212px;
-    height: 300px;
+	width: 212px!important;
+    height: 300px!important;
 }
