--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -1189,7 +1189,7 @@
 		padding-right:0px!important;
 	}
 	.index-title-ul{
-		width: 330px;
+		/*width: 330px;*/
         margin-left: -10px;
 	}
 	.index-title-ul li.more{
