--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -336,6 +336,10 @@
 		top:-23px;
 		width: 2.15625rem;
     	right: 0px;
+    	margin-top: 0px!important;
+	}
+	.designer.buyer.tab-pane dl{
+
 	}
 	.designers-mobile .overHide.subTitles .more{
 		top:-2px;
@@ -993,17 +997,17 @@
 		padding: 10px 0px;
 	}
 	.designer.buyer dl{
-		margin-left:0px;
+		margin-left:0px!important;
 	}
 	.designer.buyer dl{
 		width: 50%!important;
 		height: auto!important;
 	}
 	.designer.buyer dl dt, .designer.buyer dl dd{
-		width: 100%;
-		height: 100%;
-	    max-height: 204px;
-	    margin-bottom: 35px;
+		width: 100%!important;
+		height: 100%!important;
+	    max-height: 204px!important;
+	    margin-bottom: 35px!important;
 	}
 	.designer.buyer dl dd img{
 		width: 100%!important;
