--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -1,4 +1,16 @@
 /*************index*****************/
+.lodeNext{
+	text-align: center;
+    background: #f7f7f7;
+    height: 50px;
+    line-height: 50px;
+    cursor: pointer;
+}
+.nodata{
+	text-align: center;
+    padding-bottom: 50px;
+    font-size: 16px;
+}
 .wrapper-page{
 	margin-bottom: 100px;
 }
