--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -84,7 +84,7 @@
 	
 	.designer.designer-new-hover dl dd,
 	.designer.designer-new-hover dl{
-	  width: 103%!important;
+	  width: auto!important;
       height: 100%!important;
 	}
 	.designer.designer-new-hover dl dd img{
@@ -1020,7 +1020,7 @@
 	}
 	.designer.buyer dl dd img{
 		width: 100%!important;
-		height: 6.375rem!important;
+		height: 278px!important;
 	}
 	.designer.buyer.active{
 		width: 100%;
@@ -1152,14 +1152,19 @@
 		padding-left:0px!important;
 	}
 	
-	.img2018_01 img,
-	.img2018_02 img,
+	
 	.litteBannerImg img{
-		width: 100%!important;
-		height: 100%!important;
+		width: 168px!important;
+		height: 168px!important;
+	}
+	.img2018_01 img,
+	.img2018_02 img{
+		width: 2.625rem!important;
+		height: 2.625rem!important;
 	}
 	.img2018_03 img{
 		width: 100%!important;
+		height: 84px!important;
 	}
 	.litteBanner{
 		max-height: 168px;
@@ -1189,6 +1194,10 @@
 	}
 	.d-detail-img div{
 	  margin: 32px 5.4% 0px 0;
+	}
+	.designer.buyer dl dd img{
+		width: 100%!important;
+		height: 243px!important;
 	}
 
 }
@@ -1240,5 +1249,13 @@
 	}
 	.litteBanner,.litteBannerImg img{
 		max-height: 141px!important;
+	}
+	.litteBannerImg img{
+		width: 141px!important;
+		height: 141px!important;
+	}
+	.designer.buyer dl dd img{
+		width: 100%!important;
+		height: 6.375rem!important;
 	}
 }
