--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -1141,7 +1141,7 @@
 		height: 188px!important;
 	}
 	.img2018_03{
-		margin-top: 6px!important;
+		margin-top: 12px!important;
 	}
 	.img2018_03 img{
 		height: 87px!important;
@@ -1152,6 +1152,9 @@
 	}
 }
 @media (max-width: 425px) {
+	.img2018_03{
+		margin-top: 0px!important;
+	}
 	.checkAllBrand{
 		left: 19px;
 	}
