--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -76,6 +76,14 @@
 }
 /* 小屏幕（平板，大于等于 768px） */
 @media only screen and (max-width: 768px) {
+	.litteBanner,.litteBannerImg img {
+		height: 538px!important;
+	    max-height: 538px;
+	}
+	.litteBannerUl {
+	    padding-right: 0px!important;
+	    padding-left: 0px!important;
+	}
 	.designer.designer-new-hover a.col-md-3{
 		padding-right: 0!important;
        padding-left: 10px!important;
@@ -581,7 +589,7 @@
 	}
 	#fh5co-board .item{
 		padding-left: 0!important;
-		padding-right: 10px!important;
+		padding-right: 12px!important;
 		margin:0px!important;
 		margin-bottom: 10px!important;
     	background: none!important;
@@ -914,7 +922,12 @@
 }
 
 @media (max-width: 500px) {
-
+	.topSearch .top-search{
+		width: 11.4375rem;
+	}
+	.modal{
+	  left:13%;
+	}
 	.checkAllBrand{
 		left: 27px;
     	top: 3px;
