--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -85,7 +85,8 @@
 	    padding-right: 0px!important;
 	    padding-left: 0px!important;
 	}
-	.litteBanner li.img2018_01{
+	.litteBanner li.img2018_01,
+	.litteBanner li.img2018_01 img{
 		width: 192px!important;
 		height: 192px!important;
 	}
@@ -927,6 +928,30 @@
 
 @media (max-width: 500px) {
 	/**********2018*********************/
+	.litteBanner,.litteBannerImg img {
+		height: 193px!important;
+	    max-height: 193px;
+	}
+	.litteBanner .litteBannerUl {
+	    padding-right: 0px!important;
+	    padding-left: 0px!important;
+	}
+	.litteBanner li.img2018_01,
+	.litteBanner li.img2018_01 img{
+		width: 106px!important;
+		height: 106px!important;
+	}
+	.litteBanner li.img2018_03 img{
+		height: 150px!important;
+	}
+	.litteBanner{
+		margin-bottom: 0.46875rem;
+		margin-top:0.46875rem;
+	}
+	.litteBanner li{
+		overflow: hidden;
+		padding-left: 0px!important;
+	}
 	/* .litteBannerImg img {
 		width: 193px!important;
 	}
