--- a/yimi/public/assets/css/mobile.css
+++ b/yimi/public/assets/css/mobile.css
@@ -1182,38 +1182,28 @@
 	
 }
 @media (max-width: 425px) {
-	/**********2018****************/
-	/* .litteBannerUl{
-		padding-right:0px!important;
-		padding-left:0px!important;
-	}
-	.litteBanner,.litteBannerImg img{
+	/**********2018*********************/
+	.litteBanner,.litteBannerImg img {
 		height: 168px!important;
-		max-height: 168px!important;
+	    max-height: 168px;
 	}
-	.litteBannerImg img{
-		width: 168px!important;
-	}
-	.img2018_01,
-	.img2018_02,
-	.img2018_03{
-		padding-right: 0px!important;
-	}
-	.img2018_03{
-		margin-top: 0px!important;
-	}
-	.,
-	.img2018_01 img,
-	.img2018_02 img{
-		width: 2.625rem!important;
-		height: 2.625rem!important;
-	}
-	.img2018_03 img{
-		width: 100%!important;
+	.litteBanner li.img2018_01{
+		width: 106px!important;
 		height: 84px!important;
+	}
+	.litteBanner li.img2018_01 img{
+		width: 84px!important;
+		height: 84px!important;
+	}
+	.litteBanner li.img2018_03 img{
+		height: 97px!important;
+	}
+	/* .litteBanner li{
+		margin-bottom: 10px!important;
 	} */
 
-	/***************************/
+	/******************************************/
+
 	.checkAllBrand{
 		left: 19px;
 	}
